Spring Boot 2.0 + Lombok